--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link text-success dropdown-toggle display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Qualifications</a><div class="dropdown-menu"><a class="text-success dropdown-item text-primary display-4" href="index.html#step2-18">Expertise</a><a class="text-success dropdown-item text-primary display-4" href="index.html#step1-19" aria-expanded="false">Skills &amp; Knowledge</a><a class="text-success dropdown-item text-primary display-4" href="index.html#content8-11" aria-expanded="false">Qualities</a><a class="text-success dropdown-item text-primary display-4" href="index.html#progress-bars1-16" aria-expanded="false">Personality</a><a class="text-success dropdown-item text-primary display-4" href="index.html#services5-1c" aria-expanded="false">Education</a></div>
+                    <a class="nav-link link dropdown-toggle text-white display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Qualifications</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="index.html#step2-18">Expertise</a><a class="dropdown-item text-white display-4" href="index.html#step1-19" aria-expanded="false">Skills &amp; Knowledge</a><a class="dropdown-item text-white display-4" href="index.html#content8-11" aria-expanded="false">Qualities</a><a class="dropdown-item text-white display-4" href="index.html#progress-bars1-16" aria-expanded="false">Personality</a><a class="dropdown-item text-white display-4" href="index.html#services5-1c" aria-expanded="false">Education</a></div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link link text-success dropdown-toggle display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">
-                        Experiences</a><div class="dropdown-menu"><a class="text-success dropdown-item text-primary display-4" href="index.html#timeline3-o">Current Work</a><a class="text-success dropdown-item text-primary display-4" href="index.html#timeline3-q" aria-expanded="false">Other Work</a></div>
+                    <a class="nav-link link dropdown-toggle text-white display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="true">
+                        Experiences</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="index.html#timeline3-o">Current Work</a><a class="dropdown-item text-white display-4" href="index.html#timeline3-q" aria-expanded="false">Other Work</a></div>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success-outline display-4" href="tel:0450704087">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="tel:0450704087">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>0450 704 087</a></div>
         </div>
     </nav>
 </section>
 
-<section class="header11 cid-sedJZDhGFE mbr-fullscreen" id="header11-l">
+<section class="header11 cid-sedJZDhGFE" id="header11-l">
 
     
 
@@ -90,7 +90,7 @@
     </div>
 </section>
 
-<section class="header1 cid-seoMJjc2Bz mbr-fullscreen" id="header16-14">
+<section class="header1 cid-seoMJjc2Bz" id="header16-14">
 
     
 
@@ -130,7 +130,7 @@
                     </div>          
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5"><strong>Facilities Management&nbsp;</strong></h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">Managing Class 2 Multi-Dwelling Buildings with multiple Owners Corporation management. Implementing registered Owners Corporation rules and creating a happy community by educating all patrons to follow the rules.</p>
+                        <p class="mbr-step-text mbr-fonts-style display-7">Managing Class 2 Multi-Dwelling Buildings with multiple Owners Corporation management. Implementing registered Owners Corporation rules and creating a happy community by educating all patrons to follow the rules. Making sure all assets are compliant.</p>
                     </div>
                 </div>
             </div>
@@ -357,7 +357,7 @@ Preparing for chairman and readers.<br></p>
                 <h4 class="mbr-section-title mbr-fonts-style mb-4 display-1"><strong>Qualities</strong></h4>
                 <div class="mbr-text mbr-fonts-style display-7">
                     <ul>
-                        <li>I am a Software Developer, so then I am Analytic and Organize.</li><li>I am handling multiple buildings with different Strata Management, so then I work efficiently even under pressure.</li><li>I make my actions and decisions today for the benefits of tomorrow, so maintaining the quality and efficiency of all services is my priority.</li><li>I value customer relations, so then dealing with matters tactfully and respectfully is my nature.&nbsp;&nbsp;</li><li>I love to learn, so then others opinion is open for discussion.</li><li>I conduct public talks, so then I empower others by words of motivation and encouragement.</li><li>I know my limit, so then I can maximize my potential.</li><li>I love to work with people, so then building a team is my prime goal.</li><li>I am confident and friendly, so then I am easy to adapt and quick to learn.</li><li>I am punctual with time management, so then I am motivated, reliable, honest, and hard-working.</li>
+                        <li>I am a Software Developer, so then I am Analytical and Organize.</li><li>I am handling multiple buildings with different Strata Management, so then I work efficiently even under pressure.</li><li>I make my actions and decisions today for the benefits of tomorrow, so maintaining the quality and efficiency of all services is my priority.</li><li>I value customer relations, so then dealing with matters tactfully and respectfully is my nature.&nbsp;&nbsp;</li><li>I love to learn, so then others opinion is open for discussion.</li><li>I conduct public talks, so then I empower others by words of motivation and encouragement.</li><li>I know my limit, so then I can maximize my potential.</li><li>I love to work with people, so then building a team is my prime goal.</li><li>I am confident and friendly, so then I am easy to adapt and quick to learn.</li><li>I am punctual with time management, so then I am motivated, reliable, honest, and hard-working.</li>
                     </ul>
                 </div>
             </div>
@@ -375,12 +375,10 @@ Preparing for chairman and readers.<br></p>
         <h2 class="mbr-section-title pb-2 align-center mbr-fonts-style display-1"><strong>
             Personality</strong></h2>
 
-        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-7"><strong>Cited:</strong> https://www.16personalities.com/enfj-personality<br><br><strong>JON IS A</strong> <strong>PROTAGONIST</strong> (<strong>ENFJ</strong>)<br>
-        <div>
-</div><div><br></div><div>A <strong>Protagonist </strong>(ENFJ) is a person with the Extraverted, Intuitive, Feeling, and Judging personality traits. These warm, forthright types love helping others, and they tend to have strong ideas and values. They back their perspective with the creative energy to achieve their goals.</div><br><div>
+        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-7"><br><strong>JON IS A PROTAGONIST </strong>(<strong>ENFJ</strong>)<br><br><div><br></div><div>A Protagonist (ENFJ) is a person with the Extraverted, Intuitive, Feeling, and Judging personality traits. These warm, forthright types love helping others, and they tend to have strong ideas and values. They back their perspective with the creative energy to achieve their goals.</div><br><div>
 </div><div>
 </div><div><em>"Everything you do right now ripples outward and affects everyone. Your words can inspire freedom. Your every act can open hearts and minds.
-"</em></div><div>by <em>DAVID DEIDA</em></div><br><div>Protagonists are natural-born leaders, full of passion and charisma. Forming around two percent of the population, they are oftentimes our politicians, our coaches and our teachers, reaching out and inspiring others to achieve and to do good in the world. With a natural confidence that begets influence, Protagonists take a great deal of pride and joy in guiding others to work together to improve themselves and their community.</div></h3>
+"</em></div><div>by <em>DAVID DEIDA</em></div><br><div>Protagonists are natural-born leaders, full of passion and charisma. Forming around two percent of the population, they are oftentimes our politicians, our coaches and our teachers, reaching out and inspiring others to achieve and to do good in the world. With a natural confidence that begets influence, Protagonists take a great deal of pride and joy in guiding others to work together to improve themselves and their community.</div><br><div><em><strong>Cited:</strong> https://www.16personalities.com/enfj-personality</em></div></h3>
 
         <div class="progress_elements">
             <div class="progress1 pb-5">
@@ -467,12 +465,12 @@ Preparing for chairman and readers.<br></p>
                 <div class="col-12 col-md-6">
                     <div class="timeline-text-wrapper">
                         <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-2"><strong>Current Role:&nbsp;</strong></h4>
-                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">- <strong>Area</strong>&nbsp;<strong>Multi-Dwelling Building Manager<br></strong>- <strong>Assistant Facilities Manager</strong><br><br>•	Answering emails and calls regularly. Following up on outstanding tasks and creating a projection to be reported in the next committee meeting.
+                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">- <strong>Multi-Dwelling Building Manager<br></strong>- <strong>Assistant Facilities Manager</strong><br><br>•	Answering emails and calls regularly. Following up on outstanding tasks and creating a projection to be reported in the next committee meeting.
 <br>
 <br>•	Dealing with residents’ queries and complaints. Making all occupants have a balanced use of communal facilities and enjoy the premises.
 <br>
 <br>•	Creating daily reports of tasked review and preparing a task list for the next following schedule. <br><br>
-•	Preparing work orders and documents for repair &amp; maintenance and conducting contractor’s inductions to the building.<br>
+•	Preparing work orders or getting work quotes and documents for repair &amp; maintenance and conducting contractor’s inductions to the building.<br><br>• Making sure all Essential Services are compliant and AESMR (Annual Essential Safety Measures Report) are up to date. All Asset Service Reports are reviewed and documented. Prepare case reports for any attention to repairs or upgrades and always includes (3) three work quotation proposals.  <br>
 <br>•	Assisting the Facility Manager to conduct meetings for members of the Owners Corporation. Creating general reports, budget management, and approving invoices. <br><br>•	Coordinating and leading one or more staff to cover various areas of responsibility. Making sure all staff met the requirements by having a regular meeting every week for tool box performance.<br></p>
                     </div>
                 </div>
@@ -546,7 +544,7 @@ Preparing for chairman and readers.<br></p>
                         <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7"><strong>Class 2 Residential Building Tower 
 </strong><br>151 Berkeley Street Melbourne 
 <br>
-<br>19 LEVELS with 147 apartments and 1 concierge desk of 24/7 High-Security Service;<br>
+<br>19 LEVELS with 147 apartments, 2 commercial retail tenancy  and 1 concierge desk of 24/7 High-Security Service;<br>
 <br>Communal Facilities &amp; Services: 
 <br>- Outdoor BBQ Area<br>- Private Lounge Dining
 <br>- Study &amp; Meeting Room<br><br><strong>Role: 
@@ -600,7 +598,7 @@ Preparing for chairman and readers.<br></p>
                         <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7"><strong>Class 2 Residential Building Complex 
 </strong><br>257 Abbotsford Street North Melbourne 
 <br>
-<br>1 Building Block, 4 LEVELS with 77 Apartments and garden care taker service;&nbsp;<br><br>Communal Facilities &amp; Services: 
+<br>1 Building Block, 4 LEVELS with 88 Apartments, 1 commercial retail tenancy and garden care taker service;&nbsp;<br><br>Communal Facilities &amp; Services: 
 <br>- Outdoor BBQ Area
 <br>- Garden Courtyard<br>
 <br><strong>Role: 
@@ -626,8 +624,7 @@ Preparing for chairman and readers.<br></p>
                         <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
                             <strong>LA SCALA PRECINCT</strong></h4>
                         <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7"><strong>Class 2 Residential Building Complex</strong> 
-<br>2 La Scala Avenue Maribyrnong&nbsp;<br>4 La Scala Avenue Maribyrnong&nbsp;<br>6-28 La Scala Avenue Maribyrnong<br>30-32 La Scala Avenue Maribyrnong&nbsp;<br>54 La Scala Avenue Maribyrnong&nbsp;<br>58-60 La Scala Avenue Maribyrnong <br>
-<br>6 Building Block with 7 OC management and garden care taker service; <br><br>
+<br>2 La Scala Avenue Maribyrnong,&nbsp;&nbsp;<br>4 La Scala Avenue Maribyrnong&nbsp;<br>30-32 &amp;&nbsp;33-52  La Scala Avenue Maribyrnong<br>58-60 &amp; 6-28 La Scala Avenue Maribyrnong&nbsp;<br>54 La Scala Avenue Maribyrnong&nbsp;<br>56 La Scala Avene Maribyrnong <br><br>7 Building Block with 7 OC management and garden care taker service; <br><br>
 Communal Facilities &amp; Services: 
 <br>- Multiple Visitors Parking Bay&nbsp;<br>- Garden Courtyard<br>
 <br><strong>Role: 
@@ -757,8 +754,8 @@ Communal Facilities &amp; Services:
                 </div>
                 <div class="col-12 col-md-6">
                     <div class="timeline-text-wrapper">
-                        <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5"><strong>JW.ORG </strong><br><strong>Jehovah's Witnesses </strong><br>(Australia)</h4>
-                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">• Giving Public Talks in congregations with an average of 90 audiences in attendance.<br>• Inviting speakers from different places within the local, interstate, and international of brotherhood. <br>• Making a schedule of public talks with different themes or topics every week.<br>•	Preparing for chairman and readers.&nbsp;<br>
+                        <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5"><strong>JW.ORG </strong><strong>&nbsp;</strong><br>(Australia)</h4>
+                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">• Filipino-Tagalog community volunteering work.&nbsp;&nbsp;<br>• Giving Public Talks in congregations with an average of 90 audiences in attendance.<br>• Inviting speakers from different places within the local, interstate, and international of brotherhood. <br>• Making a schedule of public talks with different themes or topics every week.<br>•	Preparing for chairman and readers.&nbsp;<br>
 <br><strong>Role:</strong> 
 <br>- Public Talk Coordinator<br>- Ministerial Servant</p>
                     </div>
@@ -971,7 +968,7 @@ Communal Facilities &amp; Services:
                     <div class="timeline-text-wrapper">
                         <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5"><strong>Computer Technology </strong>(Philippines)</h4>
                         <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">•	Computer Technician / IT Programmer 
-<br>•	Assembling computers and installed software ordered by customers. 
+<br>•	Assembling computers and installing software ordered by customers. 
 <br>•	Fixing and troubleshooting. 
 <br>
 <strong><br>Role:</strong> 
@@ -1284,7 +1281,7 @@ Computer Learning Center,&nbsp;</strong><div><strong>Philippines.</strong></div>
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/e" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with Mobirise <a href="https://mobirise.site/j" style="color:#aaa;">web page</a> creator</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/e" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Website <a href="https://mobirise.site/f" style="color:#aaa;">was made</a> with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
