--- a/index.html
+++ b/index.html
@@ -623,10 +623,11 @@ Preparing for chairman and readers.<br></p>
                     <div class="timeline-text-wrapper">
                         <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
                             <strong>LA SCALA PRECINCT</strong></h4>
-                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7"><strong>Class 2 Residential Building Complex</strong> 
-<br>2 La Scala Avenue Maribyrnong,&nbsp;&nbsp;<br>4 La Scala Avenue Maribyrnong&nbsp;<br>30-32 &amp;&nbsp;33-52  La Scala Avenue Maribyrnong<br>58-60 &amp; 6-28 La Scala Avenue Maribyrnong&nbsp;<br>54 La Scala Avenue Maribyrnong&nbsp;<br>56 La Scala Avene Maribyrnong <br><br>7 Building Block with 7 OC management and garden care taker service; <br><br>
+                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7"><strong>Class 2 Residential Building Complex</strong> <br><br>
+Apartments Building Blocks:<br>2 La Scala Avenue Maribyrnong,&nbsp;1 Apartments Block<br>4 La Scala Avenue Maribyrnong, 1 Apartments Block<br>30 La Scala Avenue Maribyrnong, 1 Apartments Block<br>32 La Scala Avenue Maribyrnong, 1 Apartments Block<br>54 La Scala Avenue Maribyrnong, 1 Apartments Block<br>58 La Scala Avenue Maribyrnong, 1 Apartments Block
+<br>60 La Scala Avenue Maribyrnong, 1 Apartments Block&nbsp;<br><br>Townhouses Blocks:<br>6-28 La Scala Avenue Maribyrnong, 1 Townhouses Block<br>33-52 La Scala Avenue Maribyrnong, 1 Townhouses Block<br>56 La Scala Avene Maribyrnong, 2 Townhouses Block<br><br>7 Apartments Building Blocks + 4 Townhouses Blocks with 7 OC management and garden care taker service; <br><br>
 Communal Facilities &amp; Services: 
-<br>- Multiple Visitors Parking Bay&nbsp;<br>- Garden Courtyard<br>
+<br>- Shared Visitors Parking Bay&nbsp;<br>- Traffic Management System<br>- Garden Courtyard<br>
 <br><strong>Role: 
 </strong><br>- Multi-Dwelling Building Manager 
 <br>- Relief Building Manager&nbsp;</p>
@@ -1281,7 +1282,7 @@ Computer Learning Center,&nbsp;</strong><div><strong>Philippines.</strong></div>
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with Mobirise - <a href="https://mobirise.site/l" style="color:#aaa;">Try it</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/i" style="color:#aaa;">Designed with Mobirise</a> free builder</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
