--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ Preparing for chairman and readers.<br></p>
     <div class="container">
         <div class="mbr-section-head">
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-1"><strong>Experiences</strong></h3>
-            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">I am currently managing 11 buildings in four sites, including concierge staff and onsite contractors.</h4>
+            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">I am currently managing 11 buildings with 4 multi townhouses block in four sites, including concierge staff and onsite contractors.</h4>
         </div>
         <div class="timelines-container mt-4">
             <div class="row timeline-element first-separline mb-5">
@@ -465,7 +465,7 @@ Preparing for chairman and readers.<br></p>
                 <div class="col-12 col-md-6">
                     <div class="timeline-text-wrapper">
                         <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-2"><strong>Current Role:&nbsp;</strong></h4>
-                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">- <strong>Multi-Dwelling Building Manager<br></strong>- <strong>Assistant Facilities Manager</strong><br><br>•	Answering emails and calls regularly. Following up on outstanding tasks and creating a projection to be reported in the next committee meeting.
+                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">- <strong>Multi Sites Building Manager<br></strong>- <strong>Assistant Facilities Manager</strong><br><br>•	Answering emails and calls regularly. Following up on outstanding tasks and creating a projection to be reported in the next committee meeting.
 <br>
 <br>•	Dealing with residents’ queries and complaints. Making all occupants have a balanced use of communal facilities and enjoy the premises.
 <br>
@@ -623,9 +623,7 @@ Preparing for chairman and readers.<br></p>
                     <div class="timeline-text-wrapper">
                         <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
                             <strong>LA SCALA PRECINCT</strong></h4>
-                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7"><strong>Class 2 Residential Building Complex</strong> <br><br>
-Apartments Building Blocks:<br>2 La Scala Avenue Maribyrnong,&nbsp;1 Apartments Block<br>4 La Scala Avenue Maribyrnong, 1 Apartments Block<br>30 La Scala Avenue Maribyrnong, 1 Apartments Block<br>32 La Scala Avenue Maribyrnong, 1 Apartments Block<br>54 La Scala Avenue Maribyrnong, 1 Apartments Block<br>58 La Scala Avenue Maribyrnong, 1 Apartments Block
-<br>60 La Scala Avenue Maribyrnong, 1 Apartments Block&nbsp;<br><br>Townhouses Blocks:<br>6-28 La Scala Avenue Maribyrnong, 1 Townhouses Block<br>33-52 La Scala Avenue Maribyrnong, 1 Townhouses Block<br>56 La Scala Avene Maribyrnong, 2 Townhouses Block<br><br>7 Apartments Building Blocks + 4 Townhouses Blocks with 7 OC management and garden care taker service; <br><br>
+                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7"><strong>Class 2 Residential Building Complex</strong> <br><br>4 Levels Apartments Building Blocks:<br>2 La Scala Avenue Maribyrnong<br>4 La Scala Avenue Maribyrnong<br>30 La Scala Avenue Maribyrnong<br>32 La Scala Avenue Maribyrnong<br>54 La Scala Avenue Maribyrnong<br>58 La Scala Avenue Maribyrnong&nbsp;<br>60 La Scala Avenue Maribyrnong<br><br>Multi Townhouses Blocks:<br>6-28 La Scala Avenue Maribyrnong, 1 Townhouses Block<br>33-52 La Scala Avenue Maribyrnong, 1 Townhouses Block<br>56 La Scala Avene Maribyrnong, 2 Townhouses Block<br><br>7 Apartment Building Blocks + 4 Townhouses Blocks with 7 OC management and garden care taker service; <br><br>
 Communal Facilities &amp; Services: 
 <br>- Shared Visitors Parking Bay&nbsp;<br>- Traffic Management System<br>- Garden Courtyard<br>
 <br><strong>Role: 
@@ -1201,7 +1199,7 @@ Computer Learning Center,&nbsp;</strong><div><strong>Philippines.</strong></div>
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Guill Bagalawis</strong></h5>
-                        <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4"><strong>IT Administrator</strong><br><strong>XiRTAM Interactive</strong></h6>
+                        <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4"><strong>Admin &amp; Software Architect</strong><br><strong>XiRTAM Interactive</strong></h6>
                         <p class="card-text mbr-fonts-style align-center display-7">
                             guill@xirtamineractive.com.au<br>0499 086 668 
                         </p>
@@ -1282,7 +1280,7 @@ Computer Learning Center,&nbsp;</strong><div><strong>Philippines.</strong></div>
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/i" style="color:#aaa;">Designed with Mobirise</a> free builder</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/o" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/s" style="color:#aaa;">Website</a> was created with Mobirise site templates</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
