--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     </div>          
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5"><strong>Facilities Management&nbsp;</strong></h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">Managing Class 2 Multi-Dwelling Buildings with multiple Owners Corporation management. Implementing registered Owners Corporation rules and creating a happy community by educating all patrons to follow the rules. Making sure all assets are compliant.</p>
+                        <p class="mbr-step-text mbr-fonts-style display-7">Managing Class 2 Multi-Dwelling Buildings with multiple Owners Corporation management. Implementing registered Owners Corporation rules and creating a happy community by educating all patrons to follow the rules. Making sure all assets are compliant&nbsp;and AESMR documentation are up to date.</p>
                     </div>
                 </div>
             </div>
@@ -447,13 +447,13 @@ Preparing for chairman and readers.<br></p>
     <div class="container">
         <div class="mbr-section-head">
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-1"><strong>Experiences</strong></h3>
-            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">I am currently managing 11 buildings with 4 multi townhouses block in four sites, including concierge staff and onsite contractors.</h4>
+            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">I am currently managing 11&nbsp;buildings with multi townhouses in 4 sites, including concierge staff and onsite contractors.<br></h4>
         </div>
         <div class="timelines-container mt-4">
             <div class="row timeline-element first-separline mb-5">
                 <div class="timeline-date col-12">
                     <div class="timeline-date-wrapper">
-                        <p class="mbr-timeline-date display-7">YEAR 2015 to CURRENT</p>
+                        <p class="mbr-timeline-date display-7">SINCE YEAR 2015 to CURRENT</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
@@ -548,7 +548,7 @@ Preparing for chairman and readers.<br></p>
 <br>Communal Facilities &amp; Services: 
 <br>- Outdoor BBQ Area<br>- Private Lounge Dining
 <br>- Study &amp; Meeting Room<br><br><strong>Role: 
-</strong><br>- Multi-Dwelling Building Manager 
+</strong><br>- Multi Sites Building Manager 
 <br>- Relief Building Manager&nbsp;</p>
                     </div>
                 </div>
@@ -574,7 +574,7 @@ Preparing for chairman and readers.<br></p>
 <br>2 Building Blocks, 4 LEVELS with 96 Apartments and garden care taker service;&nbsp;<br>
 <br>Communal Facilities &amp; Services: 
 <br>- Outdoor BBQ Area<br>- Garden Courtyard<br><br><strong>Role: 
-</strong><br>- Multi-Dwelling Building Manager 
+</strong><br>- Multi Sites Building Manager 
 <br>- Relief Building Manager&nbsp;</p>
                     </div>
                 </div>
@@ -602,7 +602,7 @@ Preparing for chairman and readers.<br></p>
 <br>- Outdoor BBQ Area
 <br>- Garden Courtyard<br>
 <br><strong>Role: 
-</strong><br>- Multi-Dwelling Building Manager 
+</strong><br>- Multi Sites Building Manager 
 <br>- Relief Building Manager&nbsp;</p>
                     </div>
                 </div>
@@ -623,11 +623,11 @@ Preparing for chairman and readers.<br></p>
                     <div class="timeline-text-wrapper">
                         <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
                             <strong>LA SCALA PRECINCT</strong></h4>
-                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7"><strong>Class 2 Residential Building Complex</strong> <br><br>4 Levels Apartments Building Blocks:<br>2 La Scala Avenue Maribyrnong<br>4 La Scala Avenue Maribyrnong<br>30 La Scala Avenue Maribyrnong<br>32 La Scala Avenue Maribyrnong<br>54 La Scala Avenue Maribyrnong<br>58 La Scala Avenue Maribyrnong&nbsp;<br>60 La Scala Avenue Maribyrnong<br><br>Multi Townhouses Blocks:<br>6-28 La Scala Avenue Maribyrnong, 1 Townhouses Block<br>33-52 La Scala Avenue Maribyrnong, 1 Townhouses Block<br>56 La Scala Avene Maribyrnong, 2 Townhouses Block<br><br>7 Apartment Building Blocks + 4 Townhouses Blocks with 7 OC management and garden care taker service; <br><br>
+                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7"><strong>Class 2 Residential Building Complex</strong> <br>6 Building Blocks + 4 Multi Townhouses Blocks with 7 OC management and garden care taker service;&nbsp;<br><br>Apartments Building Blocks:<br>2 La Scala Avenue Maribyrnong, with 49 Apartments<br>4 La Scala Avenue Maribyrnong,&nbsp;with 49 Apartments<br>30-32 La Scala Avenue Maribyrnong,&nbsp;with 74 Apartments<br>54 La Scala Avenue Maribyrnon,&nbsp;with 44 Apartments<br>58-60 La Scala Avenue Maribyrnong,with 49 Apartments<br><br>Multi Townhouses Blocks:<br>6-28 La Scala Avenue Maribyrnong, with 12 Townhouses<br>34-52 La Scala Avenue Maribyrnong, with 10 Townhouses<br>56 La Scala Avene Maribyrnong, with 10 Townhouse<br><br><br>
 Communal Facilities &amp; Services: 
 <br>- Shared Visitors Parking Bay&nbsp;<br>- Traffic Management System<br>- Garden Courtyard<br>
 <br><strong>Role: 
-</strong><br>- Multi-Dwelling Building Manager 
+</strong><br>- Multi Sites Building Manager 
 <br>- Relief Building Manager&nbsp;</p>
                     </div>
                 </div>
@@ -1179,7 +1179,7 @@ Computer Learning Center,&nbsp;</strong><div><strong>Philippines.</strong></div>
             <div class="col-sm-6 col-lg-4">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/anna-manarczyk-280x265px-4-575x544.jpg" alt="">
+                        <a href="tel:0426 262 232"><img src="assets/images/anna-manarczyk-280x265px-4-575x544.jpg" alt=""></a>
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Anna Manarczyk</strong></h5>
@@ -1196,7 +1196,7 @@ Computer Learning Center,&nbsp;</strong><div><strong>Philippines.</strong></div>
             <div class="col-sm-6 col-lg-4">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/2guill1-14-394x433.jpeg" alt="">
+                        <a href="tel:0499 086 668"><img src="assets/images/2guill1-14-394x433.jpeg" alt=""></a>
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Guill Bagalawis</strong></h5>
@@ -1281,7 +1281,7 @@ Computer Learning Center,&nbsp;</strong><div><strong>Philippines.</strong></div>
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site" style="color:#aaa;">Mobirise</a> html web software</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/j" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise web page software - <a href="https://mobirise.site/p" style="color:#aaa;">Visit site</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
