--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@ Preparing for chairman and readers.<br></p>
                         <p class="mbr-text mbr-fonts-style mb-4 display-7">Since 2015 - Current
 <br><strong>- Multi Sites Building &amp; Facilities Manager 
 <br>- Relief Building Manager</strong>&nbsp;</p>
-                        <div class="mbr-section-btn mt-3"><a class="btn btn-success display-4" href="index.html#timeline3-o"><span class="mobi-mbri mobi-mbri-arrow-down mbr-iconfont mbr-iconfont-btn"></span>see building locations!</a> <a class="btn btn-success-outline display-4" href="index.html#timeline3-q"><span class="mobi-mbri mobi-mbri-arrow-down mbr-iconfont mbr-iconfont-btn"></span>see previous work!</a></div>
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-success display-4" href="index.html#timeline3-o"><span class="mobi-mbri mobi-mbri-arrow-down mbr-iconfont mbr-iconfont-btn"></span>see building locations!</a> <a class="btn btn-success-outline display-4" href="index.html#clients-25"><span class="mobi-mbri mobi-mbri-arrow-down mbr-iconfont mbr-iconfont-btn"></span>see previous work!</a></div>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
@@ -1091,7 +1091,7 @@ all physical aspects, including creating and sustaining safe and productive envi
             <div class="col-sm-6 col-lg-3">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <a href="https://www.callioc.com.au/about/" target="_blank"><img src="assets/images/person-logo-474x474.jpg" alt=""></a>
+                        <a href="tel:0468 522 681"><img src="assets/images/person-logo-474x474.jpg" alt=""></a>
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-7">
@@ -1125,7 +1125,7 @@ all physical aspects, including creating and sustaining safe and productive envi
             <div class="col-sm-6 col-lg-3">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <a href="tel:0499 086 668"><img src="assets/images/2guill1-14-394x433.jpeg" alt=""></a>
+                        <a href="tel:0426 129 710"><img src="assets/images/2guill1-14-394x433.jpeg" alt=""></a>
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-7"><strong>Guill Bagalawis</strong></h5>
@@ -1141,7 +1141,7 @@ all physical aspects, including creating and sustaining safe and productive envi
             <div class="col-sm-6 col-lg-3">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/person-logo-416x416.jpg" alt="">
+                        <a href="tel:0400 836 964"><img src="assets/images/person-logo-416x416.jpg" alt=""></a>
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-7">
@@ -1223,7 +1223,7 @@ all physical aspects, including creating and sustaining safe and productive envi
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Set up a free web page with <a href="https://mobirise.site/z" style="color:#aaa;">Mobirise</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/a" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Created with Mobirise <a href="https://mobirise.site/j" style="color:#aaa;">website</a> software</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
