--- a/index.html
+++ b/index.html
@@ -674,29 +674,20 @@ Preparing for chairman and readers.<br></p>
 management of buildings and facilities in public and private
 organisations to ensure the proper and efficient operation of
 all physical aspects, including creating and sustaining safe and productive environments for occupants." -&nbsp;Facility Management Association of Australia Ltd</em> (<strong>FMA Australia</strong>)<br><br><em><a href="assets/files/good-practice-guide-facilities-management.pdf" class="text-primary" target="_blank"><strong>Cited Document:</strong></a>&nbsp;</em>&nbsp;Facility Management Good Practice Guide.<em><br></em><br><br><strong>Experience in the industry:</strong><br><br>I have more than (5) five years of experience in building and facilities management and (12) twelve years in business development. I am currently managing (4) four residential building sites that have (11) eleven buildings with multi-townhouses and commercial tenancy, including concierge staff, security staff, and onsite contractors.&nbsp;<br><br><br><strong>My Duties &amp; Responsibilities: </strong><br>
-<br>- Answering emails and calls regularly. Following up on outstanding tasks and creating a projection to be reported in the next committee meeting. Making sure the client obtains satisfaction in the service and feel rewarded. 
+<br><strong>Customer Service:</strong> Answering emails and calls regularly. Following up on outstanding tasks and creating a projection to be reported in the next committee meeting. Making sure the client obtains satisfaction in the service and feel rewarded. <br><br><strong>Team Building:</strong> Coordinating and leading one or more staff to cover various areas of responsibility. Making sure all staff met the requirements by having a regular meeting every week for tool box performance. 
 <br>
-<br>- Dealing with residents’ queries and complaints. Making all occupants have a balanced use of communal facilities and enjoy the premises. 
+<br><strong>Roster management:</strong> Assigning skilled staff, making sure we covered all the shifts. Coordinating the leave application to the HR Manager directly. 
 <br>
-<br>- Implementing registered Owners Corporation rules and creating a happy community by educating all patrons to follow the rules. 
+<br><strong>Administration: </strong>Managing concierge staff and daily contractors onsite, event bookings, residential matrix, ordering keys, programming the swipe card and car park remotes, security management, preventative building maintenance plan management, repair &amp; maintenance management, waste management, roster management.<br>
+<br><strong>Issue Management</strong>: Dealing with residents’ queries and complaints. Making all occupants have a balanced use of communal facilities and enjoy the premises. Implementing registered Owners Corporation rules and creating a happy community by educating all patrons to follow the rules. 
+<br><br><strong>Task Management:</strong> Creating daily reports of tasked review and preparing a task list for the next following schedule. <br><br><strong>Meetings &amp; Presentation:</strong> Assisting the Senior Facility Manager and OC-Managers to conduct meetings for members of the Owners Corporation. Creating general reports, budget management, and approving invoices. 
 <br>
-<br>- Creating daily reports of tasked review and preparing a task list for the next following schedule. 
+<br><strong>Documentation and Warranty Certificates: </strong>Preparing work orders or getting work quotes and documents for repair &amp; maintenance and conducting contractor’s inductions to the building. 
+<br><br><strong>Service Compliant</strong>: Making sure all Essential Services are compliant and AESMR (Annual Essential Safety Measures Report) are up to date. All Asset Service Reports are reviewed and documented. Prepare case reports for any attention to repairs or upgrades and always includes (3) three work quotation proposals. 
 <br>
-<br>- Preparing work orders or getting work quotes and documents for repair &amp; maintenance and conducting contractor’s inductions to the building. 
+<br><strong>(OH&amp;S) Occupation Health &amp; Safety:</strong> Creating and implementing policies and procedures to ensure the buildings meet occupation health and safety requirements and to make sure the facilities comply with the legislation. 
 <br>
-<br>- Assisting the Facility Manager to conduct meetings for members of the Owners Corporation. Creating general reports, budget management, and approving invoices. 
-<br>
-<br>- Making sure all Essential Services are compliant and AESMR (Annual Essential Safety Measures Report) are up to date. All Asset Service Reports are reviewed and documented. Prepare case reports for any attention to repairs or upgrades and always includes (3) three work quotation proposals. 
-<br>
-<br>- OH&amp;S: Creating and implementing policies and procedures to ensure the buildings meet occupation health and safety requirements and to make sure the facilities comply with the legislation. 
-<br>
-<br>- Setting appropriate response procedures to any emergencies or urgent issues and dealing with the consequences. Training all staff to be confident and competent. Creating an elite concierge team to perform above and beyond. 
-<br>
-<br>- Coordinating and leading one or more staff to cover various areas of responsibility. Making sure all staff met the requirements by having a regular meeting every week for tool box performance. 
-<br>
-<br>- Roster management: Assigning skilled staff, making sure we covered all the shifts. Coordinating the leave application to the HR Manager directly. 
-<br>
-<br>- Administration: Managing concierge staff and daily contractors onsite, event bookings, residential matrix, ordering keys, programming the swipe card and car park remotes, security management, preventative building maintenance plan management, repair &amp; maintenance management, waste management, roster management.</p>
+<br><strong>Implementation &amp; Execution:</strong> Setting appropriate response procedures to any emergencies or urgent issues and dealing with the consequences. Training all staff to be confident and competent. Creating an elite concierge team to perform above and beyond.&nbsp;<br></p>
             </div>
         </div>
     </div>
@@ -1223,7 +1214,7 @@ all physical aspects, including creating and sustaining safe and productive envi
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/g" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Make a site - <a href="https://mobirise.site/v" style="color:#aaa;">Details here</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/q" style="color:#aaa;">This site</a> was started with Mobirise website theme</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
